fix: collapse on dark mode

--- a/src/renderer/components/ListViewItem/styles.module.scss
+++ b/src/renderer/components/ListViewItem/styles.module.scss
@@ -87,6 +87,12 @@
   }
 }
 
+.action.dark {
+  img {
+    filter: invert(1);
+  }
+}
+
 .icon.dark {
   img {
     filter: invert(1);
